# vetinari

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LEAN_PLAN.md  LICENSE  PROJECT_PLAN.md  README.md  STATE.md  devbox.json  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
.pi/skills/multi-llm-vetinari/build-expert/: SKILL.md
.pi/skills/multi-llm-vetinari/create-expert-prompt/: SKILL.md
.pi/skills/multi-llm-vetinari/implement-phase/: SKILL.md
.pi/skills/multi-llm-vetinari/reflect-karpathy/: SKILL.md
.pi/skills/multi-llm-vetinari/run-full-tests/: SKILL.md
.pi/skills/multi-llm-vetinari/update-docs/: SKILL.md
.pi/skills/multi-llm-vetinari/verify-mcp/: SKILL.md
docs/: ARCHITECTURE.md  AUDIT_REMEDIATION_PLAN.md  EXPERTS.md  INTEGRATION.md  LLM_RETRY_AND_FALLBACK_PLAN.md
examples/: basic_usage.py
src/expert_advisor/: __init__.py  config.py  llm.py  server.py
src/expert_advisor/experts/: __init__.py  prompts.py  registry.py
src/expert_advisor/routers/: __init__.py  llm_router.py
src/expert_advisor/utils/: __init__.py  cost_tracker.py  logging.py
src/vetinari/: __init__.py  config.py  experts.py  llm.py  server.py
tests/: conftest.py  test_config.py  test_cost_tracker.py  test_llm.py  test_registry.py  test_router.py  test_server.py
